2001-04-30  Martin Baulig  <baulig@suse.de>

	* gnome-marshal.list, gnome-marshal-main.c: Moved here
	from libgnomeui.

	* Makefile.am: Create gnome-marshal.[ch] from gnome-marshal.list.

	* libgnome.h: #include <libgnome/gnome-marshal.h>.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Use the new glib-mkenums instead of our own
	gnome-makeenums.pl and gnome-maketypes.awk.

	* libgnometypebuiltins.[ch]: New generated files; provide a
	type installation routine for each enum and flags type.

	* gnome-program.c, libgnomeP.h (libgnome_type_init): This
	function no longer exists.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* libgnome-init.[ch]
	(GNOME_PARAM_DESKTOP_CONFIG_DATABASE): New property.
	(GNOME_PARAM_DESKTOP_CONFIG_MONIKER): Likewise.
	(gnome_program_get_desktop_config_database): New function.

	* gnome-preferences.[ch]: New files; this has the same API than
	libgnomeui/gnome-preferences.[ch], but it's using bonobo-conf
	internally.

2001-04-24  Martin Baulig  <baulig@suse.de>

	* Makefile.am (libgnome_headers): Added gnome-i18n.h.

2001-04-23  Martin Baulig  <baulig@suse.de>

	* gnome-program.h (GnomeModuleConstructor): Removed typedef.
	(GnomeModuleClassInitHook): New typedef.
	(GnomeModuleInfo): Removed `constructor' and added `class_init'
	and `instance_init' functions.
	(gnome_program_module_load): Return a `const GnomeModuleInfo *'.
	(gnome_program_init): Added `GnomeModuleInfo *' argument.
	(gnome_program_initv): Added `GType' and `GnomeModuleInfo *'
	arguments.

	* gnome-program.c (gnome_program_constructor): Removed.
	(gnome_program_initv): Load and initialize all modules based
	on the `GnomeModuleInfo *' argument; for the moment, we don't
	use the GNOME_PARAM_MODULE_INFO and GNOME_PARAM_MODULES
	properties.

	* libgnome-init.h (gnome_gconf_module_info): Removed.
	(gnome_program_get_gconf_client, GNOME_PARAM_GCONF_CLIENT): Removed.
	(gnome_program_get_config_database): New function.